@@ -1,17 +1,21 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.aggregations.bucket.timeseries;
 
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.util.BytesRef;
+import org.elasticsearch.common.util.LongArray;
+import org.elasticsearch.common.util.ObjectArray;
 import org.elasticsearch.core.Releasables;
 import org.elasticsearch.index.fielddata.SortedBinaryDocValues;
+import org.elasticsearch.index.mapper.RoutingPathFields;
 import org.elasticsearch.index.mapper.TimeSeriesIdFieldMapper;
 import org.elasticsearch.search.aggregations.AggregationExecutionContext;
 import org.elasticsearch.search.aggregations.Aggregator;
@@ -28,6 +32,7 @@ import org.elasticsearch.search.aggregations.support.ValuesSourceConfig;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -65,47 +70,44 @@ public class TimeSeriesAggregator extends BucketsAggregator {
     }
 
     @Override
-    public InternalAggregation[] buildAggregations(long[] owningBucketOrds) throws IOException {
+    public InternalAggregation[] buildAggregations(LongArray owningBucketOrds) throws IOException {
         BytesRef spare = new BytesRef();
-        InternalTimeSeries.InternalBucket[][] allBucketsPerOrd = new InternalTimeSeries.InternalBucket[owningBucketOrds.length][];
-        for (int ordIdx = 0; ordIdx < owningBucketOrds.length; ordIdx++) {
-            BytesKeyedBucketOrds.BucketOrdsEnum ordsEnum = bucketOrds.ordsEnum(owningBucketOrds[ordIdx]);
-            List<InternalTimeSeries.InternalBucket> buckets = new ArrayList<>();
-            while (ordsEnum.next()) {
-                long docCount = bucketDocCount(ordsEnum.ord());
-                ordsEnum.readValue(spare);
-                InternalTimeSeries.InternalBucket bucket = new InternalTimeSeries.InternalBucket(
-                    BytesRef.deepCopyOf(spare), // Closing bucketOrds will corrupt the bytes ref, so need to make a deep copy here.
-                    docCount,
-                    null,
-                    keyed
-                );
-                bucket.bucketOrd = ordsEnum.ord();
-                buckets.add(bucket);
-                if (buckets.size() >= size) {
-                    break;
+        try (ObjectArray<InternalTimeSeries.InternalBucket[]> allBucketsPerOrd = bigArrays().newObjectArray(owningBucketOrds.size())) {
+            for (long ordIdx = 0; ordIdx < allBucketsPerOrd.size(); ordIdx++) {
+                BytesKeyedBucketOrds.BucketOrdsEnum ordsEnum = bucketOrds.ordsEnum(owningBucketOrds.get(ordIdx));
+                List<InternalTimeSeries.InternalBucket> buckets = new ArrayList<>();
+                while (ordsEnum.next()) {
+                    long docCount = bucketDocCount(ordsEnum.ord());
+                    ordsEnum.readValue(spare);
+                    checkRealMemoryCBForInternalBucket();
+                    InternalTimeSeries.InternalBucket bucket = new InternalTimeSeries.InternalBucket(
+                        BytesRef.deepCopyOf(spare), // Closing bucketOrds will corrupt the bytes ref, so need to make a deep copy here.
+                        docCount,
+                        null
+                    );
+                    bucket.bucketOrd = ordsEnum.ord();
+                    buckets.add(bucket);
+                    if (buckets.size() >= size) {
+                        break;
+                    }
                 }
+                // NOTE: after introducing _tsid hashing time series are sorted by (_tsid hash, @timestamp) instead of (_tsid, timestamp).
+                // _tsid hash and _tsid might sort differently, and out of order data might result in incorrect buckets due to _tsid value
+                // changes not matching _tsid hash changes. Changes in _tsid hash are handled creating a new bucket as a result of making
+                // the assumption that sorting data results in new buckets whenever there is a change in _tsid hash. This is no true anymore
+                // because we collect data sorted on (_tsid hash, timestamp) but build aggregation results sorted by (_tsid, timestamp).
+                buckets.sort(Comparator.comparing(bucket -> bucket.key));
+                allBucketsPerOrd.set(ordIdx, buckets.toArray(new InternalTimeSeries.InternalBucket[0]));
             }
-            // NOTE: after introducing _tsid hashing time series are sorted by (_tsid hash, @timestamp) instead of (_tsid, timestamp).
-            // _tsid hash and _tsid might sort differently, and out of order data might result in incorrect buckets due to _tsid value
-            // changes not matching _tsid hash changes. Changes in _tsid hash are handled creating a new bucket as a result of making
-            // the assumption that sorting data results in new buckets whenever there is a change in _tsid hash. This is no true anymore
-            // because we collect data sorted on (_tsid hash, timestamp) but build aggregation results sorted by (_tsid, timestamp).
-            buckets.sort(Comparator.comparing(bucket -> bucket.key));
-            allBucketsPerOrd[ordIdx] = buckets.toArray(new InternalTimeSeries.InternalBucket[0]);
-        }
-        buildSubAggsForAllBuckets(allBucketsPerOrd, b -> b.bucketOrd, (b, a) -> b.aggregations = a);
+            buildSubAggsForAllBuckets(allBucketsPerOrd, b -> b.bucketOrd, (b, a) -> b.aggregations = a);
 
-        InternalAggregation[] result = new InternalAggregation[owningBucketOrds.length];
-        for (int ordIdx = 0; ordIdx < owningBucketOrds.length; ordIdx++) {
-            result[ordIdx] = buildResult(allBucketsPerOrd[ordIdx]);
+            return buildAggregations(Math.toIntExact(allBucketsPerOrd.size()), ordIdx -> buildResult(allBucketsPerOrd.get(ordIdx)));
         }
-        return result;
     }
 
     @Override
     public InternalAggregation buildEmptyAggregation() {
-        return new InternalTimeSeries(name, new ArrayList<>(), false, metadata());
+        return new InternalTimeSeries(name, List.of(), false, metadata());
     }
 
     @Override
@@ -122,18 +124,16 @@ public class TimeSeriesAggregator extends BucketsAggregator {
                 SortedNumericDocValues docValues = numericVS.longValues(aggCtx.getLeafReaderContext());
                 dimensionConsumers.put(entry.getKey(), (docId, tsidBuilder) -> {
                     if (docValues.advanceExact(docId)) {
-                        for (int i = 0; i < docValues.docValueCount(); i++) {
-                            tsidBuilder.addLong(fieldName, docValues.nextValue());
-                        }
+                        assert docValues.docValueCount() == 1 : "Dimension field cannot be a multi-valued field";
+                        tsidBuilder.addLong(fieldName, docValues.nextValue());
                     }
                 });
             } else {
                 SortedBinaryDocValues docValues = entry.getValue().bytesValues(aggCtx.getLeafReaderContext());
                 dimensionConsumers.put(entry.getKey(), (docId, tsidBuilder) -> {
                     if (docValues.advanceExact(docId)) {
-                        for (int i = 0; i < docValues.docValueCount(); i++) {
-                            tsidBuilder.addString(fieldName, docValues.nextValue());
-                        }
+                        assert docValues.docValueCount() == 1 : "Dimension field cannot be a multi-valued field";
+                        tsidBuilder.addString(fieldName, docValues.nextValue());
                     }
                 });
             }
@@ -144,6 +144,7 @@ public class TimeSeriesAggregator extends BucketsAggregator {
             long currentTsidOrd = -1;
             long currentBucket = -1;
             long currentBucketOrdinal;
+            BytesRef currentTsid;
 
             @Override
             public void collect(int doc, long bucket) throws IOException {
@@ -157,12 +158,16 @@ public class TimeSeriesAggregator extends BucketsAggregator {
                     return;
                 }
 
-                TimeSeriesIdFieldMapper.TimeSeriesIdBuilder tsidBuilder = new TimeSeriesIdFieldMapper.TimeSeriesIdBuilder(null);
-                for (TsidConsumer consumer : dimensionConsumers.values()) {
-                    consumer.accept(doc, tsidBuilder);
+                BytesRef tsid;
+                if (currentTsidOrd == aggCtx.getTsidHashOrd()) {
+                    tsid = currentTsid;
+                } else {
+                    RoutingPathFields routingPathFields = new RoutingPathFields(null);
+                    for (TsidConsumer consumer : dimensionConsumers.values()) {
+                        consumer.accept(doc, routingPathFields);
+                    }
+                    currentTsid = tsid = TimeSeriesIdFieldMapper.buildLegacyTsid(routingPathFields).toBytesRef();
                 }
-
-                BytesRef tsid = tsidBuilder.buildLegacyTsid().toBytesRef();
                 long bucketOrdinal = bucketOrds.add(bucket, tsid);
                 if (bucketOrdinal < 0) { // already seen
                     bucketOrdinal = -1 - bucketOrdinal;
@@ -180,11 +185,11 @@ public class TimeSeriesAggregator extends BucketsAggregator {
     }
 
     InternalTimeSeries buildResult(InternalTimeSeries.InternalBucket[] topBuckets) {
-        return new InternalTimeSeries(name, List.of(topBuckets), keyed, metadata());
+        return new InternalTimeSeries(name, Arrays.asList(topBuckets), keyed, metadata());
     }
 
     @FunctionalInterface
     interface TsidConsumer {
-        void accept(int docId, TimeSeriesIdFieldMapper.TimeSeriesIdBuilder tsidBuilder) throws IOException;
+        void accept(int docId, RoutingPathFields routingFields) throws IOException;
     }
 }
