@@ -1,34 +1,31 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.readiness;
 
-import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateListener;
 import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.metadata.ReservedStateErrorMetadata;
-import org.elasticsearch.cluster.metadata.ReservedStateHandlerMetadata;
 import org.elasticsearch.cluster.metadata.ReservedStateMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Strings;
 import org.elasticsearch.core.Tuple;
-import org.elasticsearch.discovery.MasterNotDiscoveredException;
 import org.elasticsearch.plugins.Plugin;
-import org.elasticsearch.reservedstate.action.ReservedClusterSettingsAction;
 import org.elasticsearch.reservedstate.service.FileSettingsService;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.ESIntegTestCase.ClusterScope;
 import org.elasticsearch.test.InternalTestCluster;
+import org.junit.Before;
 
-import java.nio.charset.StandardCharsets;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -48,7 +45,6 @@ import static org.elasticsearch.test.NodeRoles.masterNode;
 import static org.elasticsearch.test.NodeRoles.nonDataNode;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.notNullValue;
 
@@ -83,6 +79,13 @@ public class ReadinessClusterIT extends ESIntegTestCase {
              }
         }""";
 
+    Path configDir;
+
+    @Before
+    public void setupMasterConfigDir() throws IOException {
+        configDir = createTempDir();
+    }
+
     @Override
     protected Settings nodeSettings(int nodeOrdinal, Settings otherSettings) {
         Settings.Builder settings = Settings.builder()
@@ -92,42 +95,41 @@ public class ReadinessClusterIT extends ESIntegTestCase {
     }
 
     @Override
+    protected Path nodeConfigPath(int nodeOrdinal) {
+        return configDir;
+    }
+
+    @Override
     protected Collection<Class<? extends Plugin>> getMockPlugins() {
         final List<Class<? extends Plugin>> plugins = new ArrayList<>(super.getMockPlugins());
         plugins.add(MockReadinessService.TestPlugin.class);
         return Collections.unmodifiableList(plugins);
     }
 
-    private void assertMasterNode(Client client, String node) {
-        assertThat(client.admin().cluster().prepareState().get().getState().nodes().getMasterNode().getName(), equalTo(node));
-    }
-
-    private void expectMasterNotFound() {
-        expectThrows(MasterNotDiscoveredException.class, clusterAdmin().prepareState().setMasterNodeTimeout("100ms"));
-    }
-
+    @AwaitsFix(bugUrl = "https://github.com/elastic/elasticsearch/issues/108613")
     public void testReadinessDuringRestarts() throws Exception {
         internalCluster().setBootstrapMasterNodeIndex(0);
+        writeFileSettings(testJSON);
         logger.info("--> start data node / non master node");
         String dataNode = internalCluster().startNode(Settings.builder().put(dataOnlyNode()).put("discovery.initial_state_timeout", "1s"));
 
-        expectMasterNotFound();
+        awaitMasterNotFound();
         assertFalse(internalCluster().getInstance(ReadinessService.class, dataNode).ready());
 
         logger.info("--> start master node");
         final String masterNode = internalCluster().startMasterOnlyNode();
 
-        assertMasterNode(internalCluster().nonMasterClient(), masterNode);
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
         tcpReadinessProbeTrue(internalCluster().getInstance(ReadinessService.class, dataNode));
         tcpReadinessProbeTrue(internalCluster().getInstance(ReadinessService.class, masterNode));
 
         final var masterReadinessService = internalCluster().getInstance(ReadinessService.class, masterNode);
-        assertMasterNode(internalCluster().nonMasterClient(), masterNode);
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
 
         logger.info("--> stop master node");
         Settings masterDataPathSettings = internalCluster().dataPathSettings(internalCluster().getMasterName());
         internalCluster().stopCurrentMasterNode();
-        expectMasterNotFound();
+        awaitMasterNotFound();
 
         tcpReadinessProbeFalse(masterReadinessService);
 
@@ -136,18 +138,19 @@ public class ReadinessClusterIT extends ESIntegTestCase {
             Settings.builder().put(nonDataNode(masterNode())).put(masterDataPathSettings)
         );
 
-        assertMasterNode(internalCluster().nonMasterClient(), nextMasterEligibleNodeName);
-        assertMasterNode(internalCluster().masterClient(), nextMasterEligibleNodeName);
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), nextMasterEligibleNodeName);
+        awaitMasterNode(internalCluster().getMasterName(), nextMasterEligibleNodeName);
         tcpReadinessProbeTrue(internalCluster().getInstance(ReadinessService.class, nextMasterEligibleNodeName));
     }
 
     public void testReadinessDuringRestartsNormalOrder() throws Exception {
         internalCluster().setBootstrapMasterNodeIndex(0);
+        writeFileSettings(testJSON);
         logger.info("--> start master node");
         String masterNode = internalCluster().startMasterOnlyNode();
         internalCluster().validateClusterFormed();
 
-        assertMasterNode(internalCluster().masterClient(), masterNode);
+        awaitMasterNode(internalCluster().getMasterName(), masterNode);
 
         logger.info("--> start 2 data nodes");
         List<String> dataNodes = internalCluster().startDataOnlyNodes(2);
@@ -175,7 +178,7 @@ public class ReadinessClusterIT extends ESIntegTestCase {
         internalCluster().restartNode(masterNode, new InternalTestCluster.RestartCallback() {
             @Override
             public Settings onNodeStopped(String nodeName) throws Exception {
-                expectMasterNotFound();
+                awaitMasterNotFound();
 
                 logger.info("--> master node [{}] stopped", nodeName);
 
@@ -197,10 +200,9 @@ public class ReadinessClusterIT extends ESIntegTestCase {
         }
     }
 
-    private Tuple<CountDownLatch, AtomicLong> setupClusterStateListenerForError(String node) {
+    private CountDownLatch setupClusterStateListenerForError(String node) {
         ClusterService clusterService = internalCluster().clusterService(node);
         CountDownLatch savedClusterState = new CountDownLatch(1);
-        AtomicLong metadataVersion = new AtomicLong(-1);
         clusterService.addListener(new ClusterStateListener() {
             @Override
             public void clusterChanged(ClusterChangedEvent event) {
@@ -213,25 +215,26 @@ public class ReadinessClusterIT extends ESIntegTestCase {
                         containsString("Missing handler definition for content key [not_cluster_settings]")
                     );
                     clusterService.removeListener(this);
-                    metadataVersion.set(event.state().metadata().version());
                     savedClusterState.countDown();
                 }
             }
         });
 
-        return new Tuple<>(savedClusterState, metadataVersion);
+        // we need this after we setup the listener above, in case the node started and processed
+        // settings before we set our listener to cluster state changes.
+        causeClusterStateUpdate();
+
+        return savedClusterState;
     }
 
-    private void writeJSONFile(String node, String json) throws Exception {
+    private void writeFileSettings(String json) throws Exception {
         long version = versionCounter.incrementAndGet();
-
-        FileSettingsService fileSettingsService = internalCluster().getInstance(FileSettingsService.class, node);
-
-        Files.createDirectories(fileSettingsService.watchedFileDir());
         Path tempFilePath = createTempFile();
+        Path fileSettings = configDir.resolve("operator").resolve("settings.json");
+        Files.createDirectories(fileSettings.getParent());
 
-        Files.write(tempFilePath, Strings.format(json, version).getBytes(StandardCharsets.UTF_8));
-        Files.move(tempFilePath, fileSettingsService.watchedFile(), StandardCopyOption.ATOMIC_MOVE);
+        Files.writeString(tempFilePath, Strings.format(json, version));
+        Files.move(tempFilePath, fileSettings, StandardCopyOption.ATOMIC_MOVE);
         logger.info("--> New file settings: [{}]", Strings.format(json, version));
     }
 
@@ -244,14 +247,67 @@ public class ReadinessClusterIT extends ESIntegTestCase {
         assertFalse(dataFileSettingsService.watching());
 
         logger.info("--> write bad file settings before we boot master node");
-        writeJSONFile(dataNode, testErrorJSON);
+        writeFileSettings(testErrorJSON);
 
         logger.info("--> start master node");
         final String masterNode = internalCluster().startMasterOnlyNode(
             Settings.builder().put(INITIAL_STATE_TIMEOUT_SETTING.getKey(), "0s").build()
         );
-        assertMasterNode(internalCluster().nonMasterClient(), masterNode);
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
         var savedClusterState = setupClusterStateListenerForError(masterNode);
+
+        FileSettingsService masterFileSettingsService = internalCluster().getInstance(FileSettingsService.class, masterNode);
+
+        assertTrue(masterFileSettingsService.watching());
+        assertFalse(dataFileSettingsService.watching());
+
+        boolean awaitSuccessful = savedClusterState.await(20, TimeUnit.SECONDS);
+        assertTrue(awaitSuccessful);
+
+        ReadinessService s = internalCluster().getInstance(ReadinessService.class, internalCluster().getMasterName());
+        assertNull(s.boundAddress());
+    }
+
+    public void testReadyAfterRestartWithBadFileSettings() throws Exception {
+        internalCluster().setBootstrapMasterNodeIndex(0);
+        writeFileSettings(testJSON);
+
+        logger.info("--> start data node / non master node");
+        String dataNode = internalCluster().startNode(Settings.builder().put(dataOnlyNode()).put("discovery.initial_state_timeout", "1s"));
+        String masterNode = internalCluster().startMasterOnlyNode();
+
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
+        assertBusy(() -> assertTrue("master node ready", internalCluster().getInstance(ReadinessService.class, masterNode).ready()));
+        assertBusy(() -> assertTrue("data node ready", internalCluster().getInstance(ReadinessService.class, dataNode).ready()));
+
+        logger.info("--> stop master node");
+        Settings masterDataPathSettings = internalCluster().dataPathSettings(internalCluster().getMasterName());
+        internalCluster().stopCurrentMasterNode();
+        awaitMasterNotFound();
+
+        logger.info("--> write bad file settings before restarting master node");
+        writeFileSettings(testErrorJSON);
+
+        logger.info("--> restart master node");
+        String nextMasterNode = internalCluster().startNode(Settings.builder().put(nonDataNode(masterNode())).put(masterDataPathSettings));
+
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), nextMasterNode);
+
+        var savedClusterState = setupClusterStateListenerForError(nextMasterNode);
+        assertTrue(savedClusterState.await(20, TimeUnit.SECONDS));
+
+        assertTrue("master node ready on restart", internalCluster().getInstance(ReadinessService.class, nextMasterNode).ready());
+    }
+
+    public void testReadyWhenMissingFileSettings() throws Exception {
+        internalCluster().setBootstrapMasterNodeIndex(0);
+        internalCluster().startNode(Settings.builder().put(dataOnlyNode()).put("discovery.initial_state_timeout", "1s"));
+
+        final String masterNode = internalCluster().startMasterOnlyNode(
+            Settings.builder().put(INITIAL_STATE_TIMEOUT_SETTING.getKey(), "0s").build()
+        );
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
+        var savedClusterState = setupClusterStateListener(masterNode);
 
         // we need this after we setup the listener above, in case the node started and processed
         // settings before we set our listener to cluster state changes.
@@ -260,13 +316,12 @@ public class ReadinessClusterIT extends ESIntegTestCase {
         FileSettingsService masterFileSettingsService = internalCluster().getInstance(FileSettingsService.class, masterNode);
 
         assertTrue(masterFileSettingsService.watching());
-        assertFalse(dataFileSettingsService.watching());
 
         boolean awaitSuccessful = savedClusterState.v1().await(20, TimeUnit.SECONDS);
         assertTrue(awaitSuccessful);
 
-        ReadinessService s = internalCluster().getInstance(ReadinessService.class, internalCluster().getMasterName());
-        assertNull(s.boundAddress());
+        ReadinessService s = internalCluster().getInstance(ReadinessService.class, masterNode);
+        assertNotNull(s.boundAddress());
     }
 
     private Tuple<CountDownLatch, AtomicLong> setupClusterStateListener(String node) {
@@ -278,12 +333,9 @@ public class ReadinessClusterIT extends ESIntegTestCase {
             public void clusterChanged(ClusterChangedEvent event) {
                 ReservedStateMetadata reservedState = event.state().metadata().reservedStateMetadata().get(FileSettingsService.NAMESPACE);
                 if (reservedState != null) {
-                    ReservedStateHandlerMetadata handlerMetadata = reservedState.handlers().get(ReservedClusterSettingsAction.NAME);
-                    if (handlerMetadata != null && handlerMetadata.keys().contains("indices.recovery.max_bytes_per_sec")) {
-                        clusterService.removeListener(this);
-                        metadataVersion.set(event.state().metadata().version());
-                        savedClusterState.countDown();
-                    }
+                    clusterService.removeListener(this);
+                    metadataVersion.set(event.state().metadata().version());
+                    savedClusterState.countDown();
                 }
             }
         });
@@ -308,11 +360,11 @@ public class ReadinessClusterIT extends ESIntegTestCase {
         var savedClusterState = setupClusterStateListener(dataNode);
 
         logger.info("--> write correct file settings before we boot master node");
-        writeJSONFile(dataNode, testJSON);
+        writeFileSettings(testJSON);
 
         logger.info("--> start master node");
         final String masterNode = internalCluster().startMasterOnlyNode();
-        assertMasterNode(internalCluster().nonMasterClient(), masterNode);
+        awaitMasterNode(internalCluster().getNonMasterNodeName(), masterNode);
         var readinessProbeListening = setupReadinessProbeListener(masterNode);
 
         FileSettingsService masterFileSettingsService = internalCluster().getInstance(FileSettingsService.class, masterNode);
@@ -329,24 +381,24 @@ public class ReadinessClusterIT extends ESIntegTestCase {
     }
 
     private void causeClusterStateUpdate() {
-        PlainActionFuture.get(
-            fut -> internalCluster().getCurrentMasterNodeInstance(ClusterService.class)
-                .submitUnbatchedStateUpdateTask("poke", new ClusterStateUpdateTask() {
-                    @Override
-                    public ClusterState execute(ClusterState currentState) {
-                        return ClusterState.builder(currentState).build();
-                    }
+        final var latch = new CountDownLatch(1);
+        internalCluster().getCurrentMasterNodeInstance(ClusterService.class)
+            .submitUnbatchedStateUpdateTask("poke", new ClusterStateUpdateTask() {
+                @Override
+                public ClusterState execute(ClusterState currentState) {
+                    return ClusterState.builder(currentState).build();
+                }
 
-                    @Override
-                    public void onFailure(Exception e) {
-                        assert false : e;
-                    }
+                @Override
+                public void onFailure(Exception e) {
+                    assert false : e;
+                }
 
-                    @Override
-                    public void clusterStateProcessed(ClusterState initialState, ClusterState newState) {
-                        fut.onResponse(null);
-                    }
-                })
-        );
+                @Override
+                public void clusterStateProcessed(ClusterState initialState, ClusterState newState) {
+                    latch.countDown();
+                }
+            });
+        safeAwait(latch);
     }
 }
