@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.common.util;
@@ -13,15 +14,15 @@ import java.util.Locale;
 import java.util.MissingResourceException;
 
 /**
- * Utilities for for dealing with {@link Locale} objects
+ * Utilities for dealing with {@link Locale} objects
  */
 public class LocaleUtils {
 
     /**
      * Parse the given locale as {@code language}, {@code language-country} or
      * {@code language-country-variant}.
-     * Either underscores or hyphens may be used as separators, but consistently, ie.
-     * you may not use an hyphen to separate the language from the country and an
+     * Either underscores or hyphens may be used as separators, but consistently, i.e.
+     * you may not use a hyphen to separate the language from the country and an
      * underscore to separate the country from the variant.
      * @throws IllegalArgumentException if there are too many parts in the locale string
      * @throws IllegalArgumentException if the language or country is not recognized
@@ -67,16 +68,16 @@ public class LocaleUtils {
         switch (parts.length) {
             case 3:
                 // lang, country, variant
-                return new Locale(parts[0], parts[1], parts[2]);
+                return Locale.of(parts[0], parts[1], parts[2]);
             case 2:
                 // lang, country
-                return new Locale(parts[0], parts[1]);
+                return Locale.of(parts[0], parts[1]);
             case 1:
                 if ("ROOT".equalsIgnoreCase(parts[0])) {
                     return Locale.ROOT;
                 }
                 // lang
-                return new Locale(parts[0]);
+                return Locale.of(parts[0]);
             default:
                 throw new IllegalArgumentException(
                     "Locales can have at most 3 parts but got " + parts.length + ": " + Arrays.asList(parts)
