@@ -9,6 +9,8 @@ package org.elasticsearch.xpack.core.ilm;
 
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -64,30 +66,28 @@ public class WaitForDataTierStepTests extends AbstractStepTestCase<WaitForDataTi
 
     public void testConditionMet() {
         String notIncludedTier = randomFrom(DataTier.ALL_DATA_TIERS);
-        List<String> otherTiers = DataTier.ALL_DATA_TIERS.stream()
-            .filter(tier -> notIncludedTier.equals(tier) == false)
-            .collect(Collectors.toList());
+        List<String> otherTiers = DataTier.ALL_DATA_TIERS.stream().filter(tier -> notIncludedTier.equals(tier) == false).toList();
         List<String> includedTiers = randomSubsetOf(between(1, otherTiers.size()), otherTiers);
         String tierPreference = String.join(",", includedTiers);
         WaitForDataTierStep step = new WaitForDataTierStep(randomStepKey(), randomStepKey(), tierPreference);
 
-        verify(step, ClusterState.EMPTY_STATE, false, "no nodes for tiers [" + tierPreference + "] available");
+        verify(step, projectStateWithEmptyProject(), false, "no nodes for tiers [" + tierPreference + "] available");
         verify(step, state(List.of(notIncludedTier)), false, "no nodes for tiers [" + tierPreference + "] available");
         verify(step, state(includedTiers), true, null);
         verify(step, state(List.of(DiscoveryNodeRole.DATA_ROLE.roleName())), true, null);
     }
 
-    private void verify(WaitForDataTierStep step, ClusterState state, boolean complete, String message) {
+    private void verify(WaitForDataTierStep step, ProjectState state, boolean complete, String message) {
         ClusterStateWaitStep.Result result = step.isConditionMet(null, state);
-        assertThat(result.isComplete(), is(complete));
+        assertThat(result.complete(), is(complete));
         if (message != null) {
-            assertThat(Strings.toString(result.getInfomationContext()), containsString(message));
+            assertThat(Strings.toString(result.informationContext()), containsString(message));
         } else {
-            assertThat(result.getInfomationContext(), is(nullValue()));
+            assertThat(result.informationContext(), is(nullValue()));
         }
     }
 
-    private ClusterState state(Collection<String> roles) {
+    private ProjectState state(Collection<String> roles) {
         DiscoveryNodes.Builder builder = DiscoveryNodes.builder();
         IntStream.range(0, between(1, 5))
             .mapToObj(
@@ -101,6 +101,7 @@ public class WaitForDataTierStepTests extends AbstractStepTestCase<WaitForDataTi
                     .build()
             )
             .forEach(builder::add);
-        return ClusterState.builder(ClusterName.DEFAULT).nodes(builder).build();
+        final var project = ProjectMetadata.builder(randomProjectIdOrDefault()).build();
+        return ClusterState.builder(ClusterName.DEFAULT).nodes(builder).putProjectMetadata(project).build().projectState(project.id());
     }
 }
