@@ -67,7 +67,7 @@ public class AggProviderTests extends AbstractXContentSerializingTestCase<AggPro
     }
 
     public static AggProvider createRandomValidAggProvider(String name, String field) {
-        Map<String, Object> agg = Collections.singletonMap(name, Collections.singletonMap("avg", Collections.singletonMap("field", field)));
+        Map<String, Object> agg = Map.of(name, Map.of("avg", Map.of("field", field)));
         try {
             SearchModule searchModule = new SearchModule(Settings.EMPTY, Collections.emptyList());
             AggregatorFactories.Builder aggs = XContentObjectTransformer.aggregatorTransformer(
@@ -87,95 +87,65 @@ public class AggProviderTests extends AbstractXContentSerializingTestCase<AggPro
         assertThat(e.getMessage(), equalTo("Datafeed aggregations are not parsable"));
     }
 
+    private static <K, V> HashMap<K, V> hashMapOf(K key, V value) {
+        HashMap<K, V> map = new HashMap<>();
+        map.put(key, value);
+        return map;
+    }
+
+    private static <K, V> HashMap<K, V> hashMapOf(K k1, V v1, K k2, V v2, K k3, V v3) {
+        HashMap<K, V> map = new HashMap<>();
+        map.put(k1, v1);
+        map.put(k2, v2);
+        map.put(k3, v3);
+        return map;
+    }
+
     public void testRewriteBadNumericInterval() {
         long numericInterval = randomNonNegativeLong();
-        Map<String, Object> maxTime = Collections.singletonMap("max", Collections.singletonMap("field", "time"));
-        Map<String, Object> numericDeprecated = new HashMap<>() {
-            {
-                put("interval", numericInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> expected = new HashMap<>() {
-            {
-                put("fixed_interval", numericInterval + "ms");
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> deprecated = Collections.singletonMap("buckets", Collections.singletonMap("date_histogram", numericDeprecated));
+        Map<String, Object> maxTime = Map.of("max", Map.of("field", "time"));
+        Map<String, Object> numericDeprecated = hashMapOf("interval", numericInterval, "field", "foo", "aggs", Map.of("time", maxTime));
+        Map<String, Object> expected = Map.of("fixed_interval", numericInterval + "ms", "field", "foo", "aggs", Map.of("time", maxTime));
+        Map<String, Object> deprecated = hashMapOf("buckets", hashMapOf("date_histogram", numericDeprecated));
         assertTrue(AggProvider.rewriteDateHistogramInterval(deprecated, false));
-        assertThat(deprecated, equalTo(Collections.singletonMap("buckets", Collections.singletonMap("date_histogram", expected))));
+        assertThat(deprecated, equalTo(Map.of("buckets", Map.of("date_histogram", expected))));
 
-        numericDeprecated = new HashMap<>() {
-            {
-                put("interval", numericInterval + "ms");
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        deprecated = Collections.singletonMap("date_histogram", Collections.singletonMap("date_histogram", numericDeprecated));
+        numericDeprecated = hashMapOf("interval", numericInterval + "ms", "field", "foo", "aggs", Map.of("time", maxTime));
+        deprecated = hashMapOf("date_histogram", hashMapOf("date_histogram", numericDeprecated));
         assertTrue(AggProvider.rewriteDateHistogramInterval(deprecated, false));
-        assertThat(deprecated, equalTo(Collections.singletonMap("date_histogram", Collections.singletonMap("date_histogram", expected))));
+        assertThat(deprecated, equalTo(Map.of("date_histogram", Map.of("date_histogram", expected))));
     }
 
     public void testRewriteBadCalendarInterval() {
         String calendarInterval = "1w";
-        Map<String, Object> maxTime = Collections.singletonMap("max", Collections.singletonMap("field", "time"));
-        Map<String, Object> calendarDeprecated = new HashMap<>() {
-            {
-                put("interval", calendarInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> expected = new HashMap<>() {
-            {
-                put("calendar_interval", calendarInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> deprecated = Collections.singletonMap(
-            "buckets",
-            Collections.singletonMap("date_histogram", calendarDeprecated)
-        );
+        Map<String, Object> maxTime = Map.of("max", Map.of("field", "time"));
+        Map<String, Object> calendarDeprecated = hashMapOf("interval", calendarInterval, "field", "foo", "aggs", Map.of("time", maxTime));
+        Map<String, Object> expected = Map.of("calendar_interval", calendarInterval, "field", "foo", "aggs", Map.of("time", maxTime));
+        Map<String, Object> deprecated = hashMapOf("buckets", hashMapOf("date_histogram", calendarDeprecated));
         assertTrue(AggProvider.rewriteDateHistogramInterval(deprecated, false));
-        assertThat(deprecated, equalTo(Collections.singletonMap("buckets", Collections.singletonMap("date_histogram", expected))));
+        assertThat(deprecated, equalTo(Map.of("buckets", Map.of("date_histogram", expected))));
 
-        calendarDeprecated = new HashMap<>() {
-            {
-                put("interval", calendarInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        deprecated = Collections.singletonMap("date_histogram", Collections.singletonMap("date_histogram", calendarDeprecated));
+        calendarDeprecated = hashMapOf("interval", calendarInterval, "field", "foo", "aggs", Map.of("time", maxTime));
+        deprecated = hashMapOf("date_histogram", hashMapOf("date_histogram", calendarDeprecated));
         assertTrue(AggProvider.rewriteDateHistogramInterval(deprecated, false));
-        assertThat(deprecated, equalTo(Collections.singletonMap("date_histogram", Collections.singletonMap("date_histogram", expected))));
+        assertThat(deprecated, equalTo(Map.of("date_histogram", Map.of("date_histogram", expected))));
     }
 
     public void testRewriteWhenNoneMustOccur() {
         String calendarInterval = "1w";
-        Map<String, Object> maxTime = Collections.singletonMap("max", Collections.singletonMap("field", "time"));
-        Map<String, Object> calendarDeprecated = new HashMap<>() {
-            {
-                put("calendar_interval", calendarInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> expected = new HashMap<>() {
-            {
-                put("calendar_interval", calendarInterval);
-                put("field", "foo");
-                put("aggs", Collections.singletonMap("time", maxTime));
-            }
-        };
-        Map<String, Object> current = Collections.singletonMap("buckets", Collections.singletonMap("date_histogram", calendarDeprecated));
+        Map<String, Object> maxTime = Map.of("max", Map.of("field", "time"));
+        Map<String, Object> calendarDeprecated = Map.of(
+            "calendar_interval",
+            calendarInterval,
+            "field",
+            "foo",
+            "aggs",
+            Map.of("time", maxTime)
+        );
+        Map<String, Object> expected = Map.of("calendar_interval", calendarInterval, "field", "foo", "aggs", Map.of("time", maxTime));
+        Map<String, Object> current = Map.of("buckets", Map.of("date_histogram", calendarDeprecated));
         assertFalse(AggProvider.rewriteDateHistogramInterval(current, false));
-        assertThat(current, equalTo(Collections.singletonMap("buckets", Collections.singletonMap("date_histogram", expected))));
+        assertThat(current, equalTo(Map.of("buckets", Map.of("date_histogram", expected))));
     }
 
     @Override
