@@ -23,6 +23,8 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.test.rest.ESRestTestCase;
+import org.elasticsearch.test.rest.ObjectPath;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentType;
@@ -41,16 +43,12 @@ import org.elasticsearch.xpack.core.ilm.Step;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
-import static java.util.Collections.singletonMap;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
 import static org.elasticsearch.test.ESTestCase.randomAlphaOfLengthBetween;
 import static org.elasticsearch.test.ESTestCase.randomBoolean;
@@ -98,7 +96,8 @@ public final class TimeSeriesRestDriver {
         RequestOptions consumeWarningsOptions = RequestOptions.DEFAULT.toBuilder()
             .setWarningsHandler(warnings -> warnings.isEmpty() == false && List.of("""
                 [indices.lifecycle.rollover.only_if_has_documents] setting was deprecated in Elasticsearch \
-                and will be removed in a future release.""").equals(warnings) == false)
+                and will be removed in a future release. \
+                See the deprecation documentation for the next major version.""").equals(warnings) == false)
             .build();
 
         Request explainRequest = new Request("GET", indexPattern + "/_ilm/explain");
@@ -154,14 +153,14 @@ public final class TimeSeriesRestDriver {
         LifecycleAction action,
         TimeValue after
     ) throws IOException {
-        Phase phase = new Phase(phaseName, after, singletonMap(action.getWriteableName(), action));
-        LifecyclePolicy lifecyclePolicy = new LifecyclePolicy(policyName, singletonMap(phase.getName(), phase));
+        Phase phase = new Phase(phaseName, after, Map.of(action.getWriteableName(), action));
+        LifecyclePolicy lifecyclePolicy = new LifecyclePolicy(policyName, Map.of(phase.getName(), phase));
         XContentBuilder builder = jsonBuilder();
         lifecyclePolicy.toXContent(builder, null);
         final StringEntity entity = new StringEntity("{ \"policy\":" + Strings.toString(builder) + "}", ContentType.APPLICATION_JSON);
         Request request = new Request("PUT", "_ilm/policy/" + policyName);
         request.setEntity(entity);
-        client.performRequest(request);
+        assertOK(client.performRequest(request));
     }
 
     public static void createComposableTemplate(RestClient client, String templateName, String indexPattern, Template template)
@@ -202,12 +201,12 @@ public final class TimeSeriesRestDriver {
             new AllocateAction(
                 1,
                 null,
-                singletonMap("_name", "javaRestTest-0,javaRestTest-1," + "javaRestTest-2," + "javaRestTest-3"),
+                Map.of("_name", "javaRestTest-0,javaRestTest-1," + "javaRestTest-2," + "javaRestTest-3"),
                 null,
                 null
             )
         );
-        warmActions.put(ShrinkAction.NAME, new ShrinkAction(1, null));
+        warmActions.put(ShrinkAction.NAME, new ShrinkAction(1, null, false));
         Map<String, LifecycleAction> coldActions = new HashMap<>();
         coldActions.put(SetPriorityAction.NAME, new SetPriorityAction(0));
         coldActions.put(
@@ -215,7 +214,7 @@ public final class TimeSeriesRestDriver {
             new AllocateAction(
                 0,
                 null,
-                singletonMap("_name", "javaRestTest-0,javaRestTest-1," + "javaRestTest-2," + "javaRestTest-3"),
+                Map.of("_name", "javaRestTest-0,javaRestTest-1," + "javaRestTest-2," + "javaRestTest-3"),
                 null,
                 null
             )
@@ -224,7 +223,7 @@ public final class TimeSeriesRestDriver {
         phases.put("hot", new Phase("hot", hotTime, hotActions));
         phases.put("warm", new Phase("warm", TimeValue.ZERO, warmActions));
         phases.put("cold", new Phase("cold", TimeValue.ZERO, coldActions));
-        phases.put("delete", new Phase("delete", TimeValue.ZERO, singletonMap(DeleteAction.NAME, DeleteAction.WITH_SNAPSHOT_DELETE)));
+        phases.put("delete", new Phase("delete", TimeValue.ZERO, Map.of(DeleteAction.NAME, DeleteAction.WITH_SNAPSHOT_DELETE)));
         LifecyclePolicy lifecyclePolicy = new LifecyclePolicy(policyName, phases);
         // PUT policy
         XContentBuilder builder = jsonBuilder();
@@ -300,7 +299,7 @@ public final class TimeSeriesRestDriver {
             Map<String, Object> responseMap = XContentHelper.convertToMap(XContentType.JSON.xContent(), is, true);
             Map<String, Object> indexSettings = (Map<String, Object>) responseMap.get(index);
             if (indexSettings == null) {
-                return Collections.emptyMap();
+                return Map.of();
             }
             return (Map<String, Object>) indexSettings.get("settings");
         }
@@ -373,35 +372,19 @@ public final class TimeSeriesRestDriver {
     @SuppressWarnings("unchecked")
     public static Integer getNumberOfPrimarySegments(RestClient client, String index) throws IOException {
         Response response = client.performRequest(new Request("GET", index + "/_segments"));
-        XContentType entityContentType = XContentType.fromMediaType(response.getEntity().getContentType().getValue());
-        final Map<String, Object> originalResponseEntity = XContentHelper.convertToMap(
-            entityContentType.xContent(),
-            response.getEntity().getContent(),
-            false
-        );
-        if (logger.isTraceEnabled()) {
-            logger.trace(
-                "segments response for {}: {}",
-                index,
-                originalResponseEntity.keySet()
-                    .stream()
-                    .map(key -> key + "=" + originalResponseEntity.get(key))
-                    .collect(Collectors.joining(", ", "{", "}"))
-            );
-        }
-        Map<String, Object> responseEntity = (Map<String, Object>) originalResponseEntity.get("indices");
-        responseEntity = (Map<String, Object>) responseEntity.get(index);
-        responseEntity = (Map<String, Object>) responseEntity.get("shards");
-        List<Map<String, Object>> shards = (List<Map<String, Object>>) responseEntity.get("0");
-        // We want to mamke sure to get the primary shard because there is a chance the replica doesn't have data yet:
-        Optional<Map<String, Object>> shardOptional = shards.stream()
-            .filter(shard -> ((Map<String, Object>) shard.get("routing")).get("primary").equals(true))
-            .findAny();
-        if (shardOptional.isPresent()) {
-            return (Integer) shardOptional.get().get("num_search_segments");
-        } else {
-            throw new RuntimeException("No primary shard found for index " + index);
-        }
+        final Map<String, Object> originalResponseEntity = ESRestTestCase.entityAsMap(response);
+        logger.trace("segments response for {}: {}", index, originalResponseEntity);
+        Map<String, Object> responseEntity = new ObjectPath(originalResponseEntity).evaluateExact("indices", index, "shards");
+        return responseEntity.values()
+            .stream()
+            .mapToInt(
+                shardList -> ((List<Map<String, Object>>) shardList).stream()
+                    .filter(shard -> ((Map<String, Object>) shard.get("routing")).get("primary").equals(true))
+                    .findFirst()
+                    .map(shard -> (Integer) shard.get("num_search_segments"))
+                    .orElseThrow(() -> new IllegalStateException("no primary shard found in " + shardList))
+            )
+            .sum();
     }
 
     public static void updatePolicy(RestClient client, String indexName, String policy) throws IOException {
@@ -412,6 +395,28 @@ public final class TimeSeriesRestDriver {
         );
         changePolicyRequest.setEntity(changePolicyEntity);
         assertOK(client.performRequest(changePolicyRequest));
+    }
+
+    /**
+     * Moves the specified index from the current ILM step to the next step.
+     */
+    public static void moveIndexToStep(RestClient client, String indexName, Step.StepKey currentStep, Step.StepKey nextStep)
+        throws IOException {
+        Request moveToStepRequest = new Request("POST", "_ilm/move/" + indexName);
+        moveToStepRequest.setJsonEntity(Strings.format("""
+            {
+              "current_step": {
+                "phase": "%s",
+                "action": "%s",
+                "name": "%s"
+              },
+              "next_step": {
+                "phase": "%s",
+                "action": "%s",
+                "name": "%s"
+              }
+            }""", currentStep.phase(), currentStep.action(), currentStep.name(), nextStep.phase(), nextStep.action(), nextStep.name()));
+        ESRestTestCase.assertAcknowledged(client.performRequest(moveToStepRequest));
     }
 
     @SuppressWarnings("unchecked")
@@ -457,6 +462,9 @@ public final class TimeSeriesRestDriver {
                     "GET",
                     SHRUNKEN_INDEX_PREFIX + "*" + originalIndex + "," + originalIndex + "/_ilm/explain"
                 );
+                // Sometimes, the original index might already have been deleted, so we need to ignore unavailable (concrete) indices.
+                explainRequest.addParameter("ignore_unavailable", Boolean.toString(true));
+                explainRequest.addParameter("expand_wildcards", "open,hidden");
                 explainRequest.addParameter("only_errors", Boolean.toString(false));
                 explainRequest.addParameter("only_managed", Boolean.toString(false));
                 Response response = client.performRequest(explainRequest);
