@@ -15,7 +15,6 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateAckListener;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ClusterStateTaskListener;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
@@ -30,6 +29,7 @@ import org.elasticsearch.reservedstate.action.ReservedClusterSettingsAction;
 import org.elasticsearch.reservedstate.service.ReservedClusterStateService;
 import org.elasticsearch.reservedstate.service.ReservedStateUpdateTask;
 import org.elasticsearch.reservedstate.service.ReservedStateUpdateTaskExecutor;
+import org.elasticsearch.reservedstate.service.ReservedStateVersionCheck;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.MockUtils;
 import org.elasticsearch.threadpool.ThreadPool;
@@ -38,17 +38,28 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.slm.SnapshotLifecycleMetadata;
+import org.elasticsearch.xpack.core.slm.SnapshotLifecyclePolicy;
+import org.elasticsearch.xpack.core.slm.SnapshotLifecyclePolicyMetadata;
+import org.elasticsearch.xpack.core.slm.SnapshotLifecyclePolicyMetadataTests;
 import org.elasticsearch.xpack.core.slm.action.DeleteSnapshotLifecycleAction;
 import org.elasticsearch.xpack.core.slm.action.PutSnapshotLifecycleAction;
+import org.junit.Assert;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
+import static org.elasticsearch.xpack.core.slm.SnapshotInvocationRecordTests.randomSnapshotInvocationRecord;
+import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
@@ -69,17 +80,17 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
 
     public void testDependencies() {
         var action = new ReservedSnapshotAction();
-        assertTrue(action.optionalDependencies().contains(ReservedRepositoryAction.NAME));
+        assertThat(action.optionalDependencies(), contains(ReservedRepositoryAction.NAME));
     }
 
-    public void testValidationFails() {
+    public void testValidationFailsNeitherScheduleOrInterval() {
         Client client = mock(Client.class);
         when(client.settings()).thenReturn(Settings.EMPTY);
         final ClusterName clusterName = new ClusterName("elasticsearch");
 
         ClusterState state = ClusterState.builder(clusterName).build();
         ReservedSnapshotAction action = new ReservedSnapshotAction();
-        TransformState prevState = new TransformState(state, Collections.emptySet());
+        TransformState prevState = new TransformState(state, Set.of());
 
         String badPolicyJSON = """
             {
@@ -100,9 +111,9 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
               }
             }""";
 
-        assertEquals(
-            "Required [schedule]",
-            expectThrows(IllegalArgumentException.class, () -> processJSON(action, prevState, badPolicyJSON)).getMessage()
+        assertThat(
+            expectThrows(IllegalArgumentException.class, () -> processJSON(action, prevState, badPolicyJSON)).getMessage(),
+            is("Required [schedule]")
         );
     }
 
@@ -121,10 +132,10 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
 
         String emptyJSON = "";
 
-        TransformState prevState = new TransformState(state, Collections.emptySet());
+        TransformState prevState = new TransformState(state, Set.of());
 
         TransformState updatedState = processJSON(action, prevState, emptyJSON);
-        assertEquals(0, updatedState.keys().size());
+        assertThat(updatedState.keys(), empty());
         assertEquals(prevState.state(), updatedState.state());
 
         String twoPoliciesJSON = """
@@ -164,7 +175,7 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         prevState = updatedState;
         updatedState = processJSON(action, prevState, twoPoliciesJSON);
         assertThat(updatedState.keys(), containsInAnyOrder("daily-snapshots", "daily-snapshots1"));
-        SnapshotLifecycleMetadata slmMetadata = updatedState.state().metadata().custom(SnapshotLifecycleMetadata.TYPE);
+        SnapshotLifecycleMetadata slmMetadata = updatedState.state().metadata().getProject().custom(SnapshotLifecycleMetadata.TYPE);
         assertThat(slmMetadata.getSnapshotConfigurations().keySet(), containsInAnyOrder("daily-snapshots", "daily-snapshots1"));
 
         String onePolicyRemovedJSON = """
@@ -189,7 +200,7 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         prevState = updatedState;
         updatedState = processJSON(action, prevState, onePolicyRemovedJSON);
         assertThat(updatedState.keys(), containsInAnyOrder("daily-snapshots"));
-        slmMetadata = updatedState.state().metadata().custom(SnapshotLifecycleMetadata.TYPE);
+        slmMetadata = updatedState.state().metadata().getProject().custom(SnapshotLifecycleMetadata.TYPE);
         assertThat(slmMetadata.getSnapshotConfigurations().keySet(), containsInAnyOrder("daily-snapshots"));
 
         String onePolicyRenamedJSON = """
@@ -214,7 +225,7 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         prevState = updatedState;
         updatedState = processJSON(action, prevState, onePolicyRenamedJSON);
         assertThat(updatedState.keys(), containsInAnyOrder("daily-snapshots-2"));
-        slmMetadata = updatedState.state().metadata().custom(SnapshotLifecycleMetadata.TYPE);
+        slmMetadata = updatedState.state().metadata().getProject().custom(SnapshotLifecycleMetadata.TYPE);
         assertThat(slmMetadata.getSnapshotConfigurations().keySet(), containsInAnyOrder("daily-snapshots-2"));
     }
 
@@ -229,37 +240,38 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
             if ((getQueueArgs[2] instanceof ReservedStateUpdateTaskExecutor executor)) {
                 doAnswer(submitTaskInvocation -> {
                     Object[] submitTaskArgs = submitTaskInvocation.getArguments();
-                    ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask> context = new ClusterStateTaskExecutor.TaskContext<>() {
-                        @Override
-                        public ReservedStateUpdateTask getTask() {
-                            return (ReservedStateUpdateTask) submitTaskArgs[1];
-                        }
+                    ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask<?>> context =
+                        new ClusterStateTaskExecutor.TaskContext<>() {
+                            @Override
+                            public ReservedStateUpdateTask<?> getTask() {
+                                return (ReservedStateUpdateTask<?>) submitTaskArgs[1];
+                            }
 
-                        @Override
-                        public void success(Runnable onPublicationSuccess) {}
+                            @Override
+                            public void success(Runnable onPublicationSuccess) {}
 
-                        @Override
-                        public void success(Consumer<ClusterState> publishedStateConsumer) {}
+                            @Override
+                            public void success(Consumer<ClusterState> publishedStateConsumer) {}
 
-                        @Override
-                        public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
+                            @Override
+                            public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
 
-                        @Override
-                        public void success(
-                            Consumer<ClusterState> publishedStateConsumer,
-                            ClusterStateAckListener clusterStateAckListener
-                        ) {}
+                            @Override
+                            public void success(
+                                Consumer<ClusterState> publishedStateConsumer,
+                                ClusterStateAckListener clusterStateAckListener
+                            ) {}
 
-                        @Override
-                        public void onFailure(Exception failure) {
-                            fail("Shouldn't fail here");
-                        }
+                            @Override
+                            public void onFailure(Exception failure) {
+                                fail("Shouldn't fail here");
+                            }
 
-                        @Override
-                        public Releasable captureResponseHeaders() {
-                            return null;
-                        }
-                    };
+                            @Override
+                            public Releasable captureResponseHeaders() {
+                                return null;
+                            }
+                        };
                     executor.execute(new ClusterStateTaskExecutor.BatchExecutionContext<>(state, List.of(context), () -> null));
                     return null;
                 }).when(taskQueue).submitTask(anyString(), any(), any());
@@ -278,7 +290,8 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         ReservedClusterStateService controller = new ReservedClusterStateService(
             clusterService,
             null,
-            List.of(new ReservedClusterSettingsAction(clusterSettings), new ReservedRepositoryAction(repositoriesService))
+            List.of(new ReservedClusterSettingsAction(clusterSettings)),
+            List.of(new ReservedRepositoryAction(repositoriesService))
         );
 
         String testJSON = """
@@ -337,9 +350,9 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         AtomicReference<Exception> x = new AtomicReference<>();
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> x.set(e));
+            controller.process("operator", parser, randomFrom(ReservedStateVersionCheck.values()), x::set);
 
-            assertTrue(x.get() instanceof IllegalStateException);
+            assertThat(x.get(), instanceOf(IllegalStateException.class));
             assertThat(x.get().getMessage(), containsString("Error processing state change request for operator"));
         }
 
@@ -349,19 +362,12 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
         controller = new ReservedClusterStateService(
             clusterService,
             null,
-            List.of(
-                new ReservedClusterSettingsAction(clusterSettings),
-                new ReservedSnapshotAction(),
-                new ReservedRepositoryAction(repositoriesService)
-            )
+            List.of(new ReservedClusterSettingsAction(clusterSettings), new ReservedSnapshotAction()),
+            List.of(new ReservedRepositoryAction(repositoriesService))
         );
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> {
-                if (e != null) {
-                    fail("Should not fail");
-                }
-            });
+            controller.process("operator", parser, randomFrom(ReservedStateVersionCheck.values()), Assert::assertNull);
         }
     }
 
@@ -372,12 +378,11 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
             transportService,
             mock(ClusterService.class),
             threadPool,
-            mock(ActionFilters.class),
-            mock(IndexNameExpressionResolver.class)
+            mock(ActionFilters.class)
         );
-        assertEquals(ReservedSnapshotAction.NAME, deleteAction.reservedStateHandlerName().get());
+        assertThat(deleteAction.reservedStateHandlerName().get(), equalTo(ReservedSnapshotAction.NAME));
 
-        var request = new DeleteSnapshotLifecycleAction.Request("daily-snapshots1");
+        var request = new DeleteSnapshotLifecycleAction.Request(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, "daily-snapshots1");
         assertThat(deleteAction.modifiedKeys(request), containsInAnyOrder("daily-snapshots1"));
     }
 
@@ -388,10 +393,9 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
             transportService,
             mock(ClusterService.class),
             threadPool,
-            mock(ActionFilters.class),
-            mock(IndexNameExpressionResolver.class)
+            mock(ActionFilters.class)
         );
-        assertEquals(ReservedSnapshotAction.NAME, putAction.reservedStateHandlerName().get());
+        assertThat(putAction.reservedStateHandlerName().get(), equalTo(ReservedSnapshotAction.NAME));
 
         String json = """
             {
@@ -411,10 +415,40 @@ public class ReservedSnapshotLifecycleStateServiceTests extends ESTestCase {
             }""";
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, json)) {
-            var request = PutSnapshotLifecycleAction.Request.parseRequest("daily-snapshots", parser);
+            var request = PutSnapshotLifecycleAction.Request.parseRequest(
+                TEST_REQUEST_TIMEOUT,
+                TEST_REQUEST_TIMEOUT,
+                "daily-snapshots",
+                parser
+            );
 
             assertThat(putAction.modifiedKeys(request), containsInAnyOrder("daily-snapshots"));
         }
     }
 
+    public void testIsNoop() {
+        SnapshotLifecyclePolicy existingPolicy = SnapshotLifecyclePolicyMetadataTests.randomSnapshotLifecyclePolicy("id1");
+        SnapshotLifecyclePolicy newPolicy = randomValueOtherThan(
+            existingPolicy,
+            () -> SnapshotLifecyclePolicyMetadataTests.randomSnapshotLifecyclePolicy("id2")
+        );
+
+        Map<String, String> existingHeaders = Map.of("foo", "bar");
+        Map<String, String> newHeaders = Map.of("foo", "eggplant");
+
+        SnapshotLifecyclePolicyMetadata existingPolicyMeta = new SnapshotLifecyclePolicyMetadata(
+            existingPolicy,
+            existingHeaders,
+            randomNonNegativeLong(),
+            randomNonNegativeLong(),
+            randomSnapshotInvocationRecord(),
+            randomSnapshotInvocationRecord(),
+            randomNonNegativeLong()
+        );
+
+        assertTrue(TransportPutSnapshotLifecycleAction.isNoopUpdate(existingPolicyMeta, existingPolicy, existingHeaders));
+        assertFalse(TransportPutSnapshotLifecycleAction.isNoopUpdate(existingPolicyMeta, newPolicy, existingHeaders));
+        assertFalse(TransportPutSnapshotLifecycleAction.isNoopUpdate(existingPolicyMeta, existingPolicy, newHeaders));
+        assertFalse(TransportPutSnapshotLifecycleAction.isNoopUpdate(null, existingPolicy, existingHeaders));
+    }
 }
